tests/data/php/shouldpass/NamespaceInParam.php
<?php
/**
 * @package Foo
 */
class Bar {
    
    /**
     * Some method
     * 
     * @param \Some\Package\Name\MyClass $object
     */
    public function foo( MyClass $object ) {}

    /**
     * Some other method
     * 
     * @param \Some\Package\Name\MyClass $object
     */
    public function bazzle( \Some\Package\Name\MyClass $object ) {}
    
}

